WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131719
AX: Accessing a table cell with an invalid column header crashes
https://bugs.webkit.org/show_bug.cgi?id=131719
Summary
AX: Accessing a table cell with an invalid column header crashes
chris fleizach
Reported
2014-04-15 17:54:20 PDT
* thread #1: tid = 0x95b3a, 0x0000000113f5dd75 WebCore`WebCore::AccessibilityTableCell::columnHeaders(this=0x00007ff91a48cd60, headers=0x00007fff53bdb1c8) + 389 at AccessibilityTableCell.cpp:184, queue = 'com.apple.main-thread', stop reason = EXC_BAD_ACCESS (code=1, address=0x0) frame #0: 0x0000000113f5dd75 WebCore`WebCore::AccessibilityTableCell::columnHeaders(this=0x00007ff91a48cd60, headers=0x00007fff53bdb1c8) + 389 at AccessibilityTableCell.cpp:184 181 continue; 182 183 std::pair<unsigned, unsigned> childRowRange; -> 184 tableCell->rowIndexRange(childRowRange); 185 186 const AtomicString& scope = tableCell->getAttribute(scopeAttr); 187 if (scope == "col" || tableCell->isTableHeaderCell())
Attachments
patch
(3.89 KB, patch)
2014-04-15 21:40 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-04-15 17:54:51 PDT
<
rdar://problem/16628821
>
chris fleizach
Comment 2
2014-04-15 21:40:35 PDT
Created
attachment 229429
[details]
patch
WebKit Commit Bot
Comment 3
2014-04-16 11:05:11 PDT
Comment on
attachment 229429
[details]
patch Clearing flags on attachment: 229429 Committed
r167361
: <
http://trac.webkit.org/changeset/167361
>
WebKit Commit Bot
Comment 4
2014-04-16 11:05:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug