AX: Accessing a table cell with an invalid column header crashes https://bugs.webkit.org/show_bug.cgi?id=131719

Reviewed by Darin Adler.

If no tableCell is available as a column/row header, then do not continue processing.

Test: accessibility/table-missing-column-header-crash.html

* accessibility/AccessibilityTableCell.cpp:
(WebCore::AccessibilityTableCell::columnHeaders):
(WebCore::AccessibilityTableCell::rowHeaders):


Canonical link: https://commits.webkit.org/149795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167361 268f45cc-cd09-0410-ab3c-d52691b4dbfc